--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,14 @@
 html, body, #root {
   height: 100%;
   width: 100%;
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+h2, h5 {
   margin: 0;
 }
